# rishat-test-task

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
stripe_buy/: admin.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
stripe_buy/management/commands/: add_admin.py
stripe_buy/migrations/: 0001_initial.py  0002_order_alter_item_price_ordertoitem_order_items.py  0003_alter_item_price.py  0004_discount_order_discount.py  0005_alter_ordertoitem_item_alter_ordertoitem_order.py  0006_alter_discount_duration.py  0007_alter_order_discount.py  0008_tax_order_tax.py  0009_remove_order_tax_order_tax.py  0010_rename_tax_order_taxes.py  0011_item_currency.py
stripe_buy/templates/: index.html  item.html  layout.html  list.html  order.html  order_create.html
