[tool.poetry]
name = "rishat-test-task"
version = "0.1.0"
description = ""
authors = ["Aleksey Kosin <akosin@udm.ru>"]
readme = "README.md"
packages = [{include = "stripe_buy"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"
stripe = "^5.2.0"
python-dotenv = "^0.21.1"
django-extensions = "^3.2.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
